Solutions/s_A/ex4.yaml
apiVersion: v1
kind: Pod
metadata:
 name: design-pod1
spec:
  containers:
  - image: vish/stress
    name: design-pod1
    resources:
      limits:
        cpu: "2"
        memory: "1035Mi"
      requests:
        cpu: "0.3"
        memory: "456Mi"
    args:
    - -cpus
    - "1"
    - -mem-total
    - "1036Mi"
    - -mem-alloc-size
    - "500Mi"
    - -mem-alloc-sleep
    - "1s"
  nodeSelector:
          system: secondOne

#Domain CPU requirements
